Avoid showing invisible text for Font Awesome

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,7 +9,6 @@
   margin: 0 0 0 0;
   font-family: 'Helvetica Neue';
   font-size: 13px;
-  font-display: swap;
 }
 
 h1, h2, h3, h4, h5, h6 {
